# binius-models

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
binius_models/: conftest.py
binius_models/finite_fields/: binary_field_isomorphism.py  finite_field.py  prime_field.py  test_binary_field_isomorphism.py  test_tower.py  test_tower_192.py  test_tower_packed.py  tower.py  tower_packed.py  utils.py
binius_models/hashes/vision/: dump_vision_instance.sage  generate_vision_instance.sage  mds.py  test_generate_affine_matrix.py  test_mds.py  test_utils.py  test_vision32b.py  utils.py  vision.py
binius_models/ips/: polynomial.py  sumcheck.py  test_sumcheck.py  test_zerocheck_v1.py  utils.py  zerocheck_v1.py
binius_models/ntt/: additive_ntt.py  frobenius.py  odd_interpolate.py  test_additive_ntt.py  test_frobenius.py  test_odd_interpolate.py
binius_models/pcs/: batched_fri_binius.py  fri_binius.py  ring_switching.py  tensor_alg.py  test_batched_fri_binius.py  test_fri_binius.py  test_ring_switching.py  test_tensor_alg.py
binius_models/polynomials/: equality.py  shift.py  test_equality.py  test_shift.py
binius_models/tests/: __init__.py  helpers.py
binius_models/utils/: utils.py
